# mindflow

./: .env.example  .gitignore  CLAUDE.md  Makefile
.claude/commands/: issue.md
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: flows.py  nodes.py  websocket.py
backend/src/core/: plugin_manager.py
backend/src/models/: __init__.py  connection.py  flow.py  node.py
backend/src/services/: flow_service.py  node_service.py
backend/src/websocket/: __init__.py  connection_manager.py  message_handler.py
docker/: backend.Dockerfile  docker-compose.yml
docs/adr/: 0001-adopt-monorepo-structure.md  0002-tech-stack.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/components/FlowEditor/: CustomNode.tsx  FlowEditor.tsx
scripts/ci/: readme_documentation.md
scripts/ci/update_kdb/: config_and_setup.txt  doc_sync_system.py  test_suite.py
shared/schemas/: flow.json
shared/types/: index.ts
specs/: Welcome.md
specs/.obsidian/: workspace.json
specs/features/: Flow Versioning.md
specs/functional/: Creating a new Flow.md  Opening a Flow.md
specs/ontology/: Connection Group.md  Connection.md  Flow.md  Node.md
specs/ui/: Flow Editor Component.md  Flow Explorer.md
