[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindflow-backend"
version = "0.1.0"
description = "MindFlow Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]